--- a/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1.csproj
@@ -6,17 +6,17 @@
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
-		<RootNamespace>EjerciciosTema7</RootNamespace>
+		<RootNamespace>MauiApp1</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>EjerciciosTema7</ApplicationTitle>
+		<ApplicationTitle>MauiApp1</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.ejerciciostema7</ApplicationId>
-		<ApplicationIdGuid>92a3810b-6cc9-407f-ac88-04afa58c4e5e</ApplicationIdGuid>
+		<ApplicationId>com.companyname.mauiapp1</ApplicationId>
+		<ApplicationIdGuid>779ee607-ae7e-43e2-8f81-4d4e836ebddc</ApplicationIdGuid>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -49,61 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Images\icono.jpg" />
-	  <None Remove="Resources\Images\png_icon.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <COMReference Include="Accessibility">
-	    <WrapperTool>tlbimp</WrapperTool>
-	    <VersionMinor>1</VersionMinor>
-	    <VersionMajor>1</VersionMajor>
-	    <Guid>1ea4dbf0-3c3b-11cf-810c-00aa00389b71</Guid>
-	    <Lcid>0</Lcid>
-	    <Isolated>false</Isolated>
-	    <EmbedInteropTypes>true</EmbedInteropTypes>
-	  </COMReference>
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Biblioteca\Biblioteca.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Compile Update="Views\PaginaTabbed.xaml.cs">
-	    <DependentUpon>PaginaTabbed.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Views\pagina2.xaml.cs">
-	    <DependentUpon>pagina2.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Views\pagina1.xaml.cs">
-	    <DependentUpon>pagina1.xaml</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiXaml Update="Views\MainPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\pagina2.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\pagina1.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\pagina3.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\pagina4.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\pagina5.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
